# vision

./: README.md
AdditionalFeatures/: readme.txt
Meetings/: Agenda_Feb_13_2016.docx  Agenda_Feb_20_2016.odt  ~$enda_Feb_13_2016.docx
Meetings/Past Meetings/: .~lock.Agenda_Feb_13_2016.docx#  Agenda_Feb_13_2016.docx
Paper/: CameraSpecs.xlsx  OverallPaper.docx  OverallPaper.odt  Virtual Backdrop - Copy.docx  Virtual Backdrop.docx  ~$erallPaper.docx
Presentation/: Virtual Backdrop.pptx  Virtual.Backdrop.pptx  Virtual.Backdrop_Ed.pptx  Virtual.Backdrop_Nichole.pptx  ~$Virtual.Backdrop_Ed.pptx
Source/FaceTracking/: DefaultFace.cpp  DefaultFace.hpp  Face.hpp  makeit
Source/FaceTracking/UnitTests/: CMakeCache.txt  CMakeLists.txt  Display.cpp  FaceTest  FaceTest.cpp  Makefile  TestInput1.avi  cmake_install.cmake
Source/GrabCut/: CMakeCache.txt  CMakeLists.txt  Makefile  PerformGrab.hpp  cmake_install.cmake
Source/RemoveBackground/: .gitignore  BackgroundRemover.cpp  BackgroundRemover_Nichole.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  Points.hpp  bkgd_bts.cpp  cmake_install.cmake
Source/Testing/: runTests.sh
Source/Testing/Input/: TestInput2.avi  TestInput3.avi  TestInput4.avi  TestInput5.avi  decreaseVideoQuality.sh
Website/: index.html
Website/css/: styles.css
f/: hello.txt
