cmake_minimum_required(VERSION 2.8)
project( FaceTest )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( FaceTest FaceTest.cpp )
target_link_libraries( FaceTest ${OpenCV_LIBS} )
target_link_libraries( FaceTest )

project( Display )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS}  .. )
add_executable( Display Display.cpp ../DefaultFace.cpp )
target_link_libraries( Display ${OpenCV_LIBS} )
target_link_libraries( Display )
